# RelManager

./: Cargo.toml  Readme.md  build.rs  data.db
src/: main.rs
src/app/: db.rs  github.rs  mod.rs  model.rs  platform.rs  updater.rs
src/gui/: add_wizard.rs  edit_dialog.rs  main_window.rs  mod.rs  settings_window.rs  tag_group_manager.rs  widgets.rs
src/utils/: mod.rs  path.rs  version.rs
