[package]
name = "RelManager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe ="0.27"
egui = "0.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
open = "5"
semver = "1"
log = "0.4"
env_logger = "0.11"
tray-icon = "0.15"       # 系统托盘（可选）
rfd = "0.14"                # 文件选择对话框
walkdir = "2"               # 遍历目录
anyhow = "1"                 # 简化错误处理
thiserror = "1"              # 自定义错误类型
futures = "0.3"              # 异步处理
image = "0.24"

[build-dependencies]
winres = "0.1"
